# G3DAI

./: .gitignore  ACTUAL_WORK_INVENTORY.md  AI_PLATFORM_REUSE_AND_REFACTOR_PLAN.md  AURA_LAUNCH_INSTRUCTIONS.md  AURA_MVP_COMPLETION_SUMMARY.md  AURA_SUCCESS.md  CLAUDE.md  FINAL_TYPESCRIPT_RESOLUTION_SUMMARY.md  G3DAI_Analysis.md  G3DAI_Analysis_Report.md  G3D_ANNOTATEAI_IMPLEMENTATION_REPORT.md  G3D_ANNOTATE_AI_REFACTOR_PLAN.md  G3D_AnnotateAI_MVP_COMPREHENSIVE_DOCUMENTATION.md  G3D_IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY_COMPLETE.md  IMPLEMENTATION_SUMMARY_FINAL.md  INFRASTRUCTURE_REORGANIZATION_PLAN.md  MEDSIGHT_MVP_REFACTOR_PLAN.md  MVP_EXECUTION_SUMMARY.md  MVP_FINAL_COMPLETION_REPORT.md  NOTICE  PHASE_0.3_COMPLETION_REPORT.md  PHASE_3_IMPLEMENTATION_COMPLETE.md  PHASE_6_COMPLETION_REPORT.md  PHASE_COMPLETION_REPORT.md  PostIntegration-New.md  README.md  REMAINING_MVP_TASKS.md  REORGANIZATION_SUMMARY.md  RefactorAndReUse.md  TESTING_AURA_GUIDE.md  TYPESCRIPT_RESOLUTION_PLAN.md  TYPESCRIPT_RESOLUTION_SUMMARY.md  aura-launcher.js  enterprise-scale-analysis.md  launch-aura-ide.sh  launch-aura.js  migration-plan.md  package-lock.json  package.json  (+4 more)
ai-platforms/annotateai/: .env.example  .gitleaks.toml  COMPLETION_STATUS.md  Dockerfile  Dockerfile.production  Dockerfile.worker  MVP_COMPLETION_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  README.md  docker-compose.production.yml  docker-compose.yml  env.production.example  fix-theme.js  healthcheck.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  start-frontend.sh  tailwind.config.js  tsconfig.json  validate-mvp.js  worker-health.js
ai-platforms/annotateai/.github/codeql/: codeql-config.yml
ai-platforms/annotateai/.github/workflows/: ci-cd-pipeline.yml  production-deploy.yml  security-scan.yml
ai-platforms/annotateai/deployment/kubernetes/: ai-model-service.yaml  configmaps.yaml  infrastructure.yaml  ingress.yaml  namespace.yaml  secrets.yaml  storage.yaml
ai-platforms/annotateai/deployment/monitoring/: alert-rules.yml  alerting-rules.yml  apm-config.yml  docker-compose.monitoring.yml  elk-stack.yml  grafana-dashboard.json  grafana-dashboards.yml  jaeger.yml  prometheus-config.yml  prometheus.yml
ai-platforms/annotateai/deployment/optimization/: auto-scaling.yml  database-optimization.yml
ai-platforms/annotateai/deployment/scripts/: deploy-blue-green.sh  deploy-kubernetes.sh
ai-platforms/annotateai/docs/: autonomous-development-directive.md  completion-plan-missing-components.md  comprehensive-documentation.md  deployment-checklist.md  executive-summary-implementation-complete.md  final-achievement-summary.md  g3d-integration-progress.md  go-to-market-strategy.md  implementation-verification-report.md  integration-implementation-progress.md  integration-progress.md  launch-press-release.md  marketing-copy.md  mvp-development-roadmap.md  mvp-development-roadmap2.md  mvp-development-roadmap3.md  next-phase-roadmap.md  phase-5.3-monitoring-observability-completion.md  phase2-autonomous-execution.md  phase3-production-ai-directive.md  platform-overview-readme.md  verification-report.md  website-content.md
ai-platforms/annotateai/infrastructure/3d-processing-service/: Dockerfile  main.py  mesh_utils.py  point_cloud_utils.py  requirements.txt
ai-platforms/annotateai/infrastructure/ai-model-service/: Dockerfile  main.py  requirements.txt
ai-platforms/annotateai/infrastructure/api-gateway/: app.module.ts  main.py  package.json  server.ts
ai-platforms/annotateai/infrastructure/asset-processor/: main.py
ai-platforms/annotateai/infrastructure/auth-service/: auth.service.ts  main.py
ai-platforms/annotateai/infrastructure/collaboration-service/: main.py  websocket.service.ts
ai-platforms/annotateai/infrastructure/data-pipeline/: Dockerfile  main.py  requirements.txt
ai-platforms/annotateai/infrastructure/database/: schema.sql
ai-platforms/annotateai/infrastructure/enterprise-services/: main.py  requirements.txt
ai-platforms/annotateai/infrastructure/performance-optimization/: Dockerfile  main.py  requirements.txt
ai-platforms/annotateai/infrastructure/pre-annotation-service/: pre_annotation.py
ai-platforms/annotateai/infrastructure/storage-service/: main.py  storage.service.ts
ai-platforms/annotateai/infrastructure/synthetic-data-service/: Dockerfile  data_augmentation.py  domain_adaptation.py  main.py  quality_filtering.py  requirements.txt
ai-platforms/annotateai/infrastructure/training-service/: Dockerfile  main.py  requirements.txt
ai-platforms/annotateai/infrastructure/video-processing-service/: Dockerfile  main.py  requirements.txt
ai-platforms/annotateai/infrastructure/xr-service/: Dockerfile  main.py  (+1 more)
ai-platforms/annotateai/nginx/: nginx.conf
ai-platforms/annotateai/redis/: redis.conf
ai-platforms/annotateai/scripts/: README.md  deploy-production.sh  fix-all-remaining-imports.js  fix-final-typescript-issues.js  fix-import-paths.js  fix-imports.js  fix-package-json.js  g3d-prefix-mappings.js  init-db.sql  migrate-g3d-codebase.js  setup.sh
ai-platforms/annotateai/src/: PreAnnotationEngine.ts  XRCollaboration.tsx  middleware.ts
ai-platforms/annotateai/tests/: conftest.py
ai-platforms/annotateai/websocket/: Dockerfile  index.js  package.json
ai-platforms/annotateai/worker/: index.js
ai-platforms/medsight-pro/: .gitignore  Dockerfile  README.md  api-server.js  docker-compose.yml  env.example  next.config.js  package.json  pyproject.toml  requirements.txt  server.js  start-frontend.sh  test-import.ts  tsconfig.json  webgpu.d.ts
ai-platforms/medsight-pro/docs/: autonomous-execution-prompt.md  brand-marketing-guidelines.md  clinical-validation-documentation.md  comprehensive-development-plan.md  development-progress-report.md  enterprise-deployment-completion.md  go-to-market-strategy.md  marketing-campaign-playbook.md  performance-compute-completion.md  production-deployment-guide.md  website-marketing-content.md
ai-platforms/medsight-pro/prisma/: schema.prisma
ai-platforms/medsight-pro/src/: main.py  middleware.ts
(+1719 files in other folders)
